# euron-solution

./: Euron.postman_collection.json  README.md  docker-compose.yml
backend/: docker-compose.yml  project_structure.txt
backend/referral-claiming-service/: .env  Cargo.toml  Dockerfile
backend/referral-claiming-service/src/: database.rs  lib.rs  main.rs
backend/referral-claiming-service/src/controllers/: mod.rs
backend/referral-claiming-service/src/models/: database.rs
backend/referral-claiming-service/src/repositories/: mod.rs
backend/referral-claiming-service/src/services/: mod.rs
backend/referral-generation-service/: .env  Cargo.toml  Dockerfile
backend/referral-generation-service/src/: error.rs  lib.rs  main.rs  response.rs
backend/referral-generation-service/src/controllers/: mod.rs
backend/referral-generation-service/src/models/: database.rs  request.rs
backend/referral-generation-service/src/services/: mod.rs
backend/referral-query-service/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/referral-query-service/src/: error.rs  lib.rs  main.rs  response.rs
backend/referral-query-service/src/controllers/: mod.rs
backend/referral-query-service/src/models/: database.rs
backend/referral-query-service/src/repositories/: mod.rs
backend/referral-query-service/src/services/: mod.rs
db/: init.sql
frontend/euron-presale/: .dockerignore  .env  .env.example  .htaccess  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/euron-presale/public/: index.html
frontend/euron-presale/src/: index.js  project_structure.txt
(+41 files in other folders)
