[package]
name = "referral-query-service"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = {version = "2.8.0", features = ["tokio"]}
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
bcrypt = "0.16.0"
dotenv = "0.15.0"
tokio-postgres = {version = "0.7.12", features = ["default"]}
r2d2 = "0.8.10"
diesel = {version = "2.2.5", features = ["postgres","r2d2"]}
uuid = { version = "1.11.0", features = ["serde", "v4"] }
r2d2_postgres = "0.18.1"
log = "0.4.22"
reqwest = {version = "0.12.9", features = ["json"]}
chrono = "0.4.39"
thiserror = "1.0.69"
actix-web = "4.9.0"
http = "1.2.0"
ntex-cors = "2.0.0"
